# apps/backend/api/swag-docs/swagger.yaml
@@ -12,6 +12,65 @@ definitions:
         description: Name holds the value of the "name" field.
         type: string
     type: object
+  github_com_SURF-Innovatie_MORIS_internal_api_changelogdto.Changelog:
+    properties:
+      entries:
+        items:
+          $ref: '#/definitions/github_com_SURF-Innovatie_MORIS_internal_api_changelogdto.ChangelogEntry'
+        type: array
+    type: object
+  github_com_SURF-Innovatie_MORIS_internal_api_changelogdto.ChangelogEntry:
+    properties:
+      at:
+        type: string
+      event:
+        type: string
+    type: object
+  github_com_SURF-Innovatie_MORIS_internal_api_organisationdto.Response:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  github_com_SURF-Innovatie_MORIS_internal_api_persondto.Response:
+    properties:
+      email:
+        type: string
+      familyName:
+        type: string
+      givenName:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  github_com_SURF-Innovatie_MORIS_internal_api_projectdto.Response:
+    properties:
+      description:
+        example: This is a new project
+        type: string
+      endDate:
+        example: "2025-12-31T23:59:59Z"
+        type: string
+      id:
+        type: string
+      organization:
+        $ref: '#/definitions/github_com_SURF-Innovatie_MORIS_internal_api_organisationdto.Response'
+      people:
+        items:
+          $ref: '#/definitions/github_com_SURF-Innovatie_MORIS_internal_api_persondto.Response'
+        type: array
+      startDate:
+        example: "2025-01-01T00:00:00Z"
+        type: string
+      title:
+        example: New Project
+        type: string
+      version:
+        type: integer
+    type: object
   github_com_SURF-Innovatie_MORIS_internal_api_projectdto.StartRequest:
     properties:
       description:
@@ -427,6 +486,35 @@ paths:
       summary: Update a project
       tags:
       - projects
+  /projects/{id}/changelog:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the change log for a specific project
+      parameters:
+      - description: Project ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_SURF-Innovatie_MORIS_internal_api_changelogdto.Changelog'
+        "400":
+          description: invalid project id
+          schema:
+            type: string
+        "500":
+          description: internal server error
+          schema:
+            type: string
+      summary: Get change log for a project
+      tags:
+      - projects
   /projects/{id}/people/{personId}:
     delete:
       consumes:
@@ -449,7 +537,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_SURF-Innovatie_MORIS_internal_domain_entities.Project'
+            $ref: '#/definitions/github_com_SURF-Innovatie_MORIS_internal_api_projectdto.Response'
         "400":
           description: invalid project id or person id
           schema:
